--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,7 @@
   <body>   
     <div id="root"></div>    
   </body>
-
+<!-- <textarea ref={(input) => { this.textInput = input; }} 
+var value = this.textInput.value;﻿
+ -->
 </html>
